@@ -55,6 +55,9 @@ whole directory trees. Also \-\-update option can be used with \-\-check
 to verify the hash file before updating it.
 .IP "\-k, \-\-check\-embedded"
 Verify files by crc32 sum embedded in their names.
+.IP "\-\-missing"
+Read hash files specified by command line. Instead of verification, just print
+missing and inaccessible files.
 .IP "\-\-torrent"
 Create a torrent file for each processed file.
 .IP "\-h, \-\-help"
